# EasyKiConverter

./: .clang-format  .gitattributes  .gitignore  .qmlformat.ini  .qmlformat.json  404.html  CMakeLists.txt  CMakePresets.json  Doxyfile  EasyKiConverter.desktop  ExporterSymbol_backup.cpp  IFLOW.md  Main.qml  README.md  README_CPP.md  README_en.md  download_files.py  fetch_lceda.py  format_code.bat  index.html  main.cpp  mkdocs.yml  nfpm.yaml  run_tests.bat  run_tests_quick.bat  sitemap.xml  vcpkg.json
src/: CMakeLists.txt  gui_main.cpp  main.cpp  test_json_parsing.cpp  test_local_data.cpp
src/core/: CMakeLists.txt  LanguageManager.cpp  LanguageManager.h  Version.h.in
src/core/easyeda/: CMakeLists.txt  EasyedaApi.cpp  EasyedaApi.h  EasyedaFootprintImporter.cpp  EasyedaFootprintImporter.h  EasyedaImporter.cpp  EasyedaImporter.h  EasyedaSymbolImporter.cpp  EasyedaSymbolImporter.h  EasyedaUtils.h  JLCDatasheet.cpp  JLCDatasheet.h
src/core/interfaces/: IEasyedaApi.cpp  IEasyedaApi.h  IExporter3DModel.cpp  IExporter3DModel.h  IExporterFootprint.cpp  IExporterFootprint.h  IExporterSymbol.cpp  IExporterSymbol.h  INetworkUtils.cpp  INetworkUtils.h
src/core/kicad/: CMakeLists.txt  Exporter3DModel.cpp  Exporter3DModel.h  ExporterFootprint.cpp  ExporterFootprint.h  ExporterSymbol.cpp  ExporterSymbol.h  FootprintGraphicsGenerator.cpp  FootprintGraphicsGenerator.h  KiCadExportMetadata.h  KiCadLibTable.cpp  KiCadLibTable.h  SymbolGraphicsGenerator.cpp  SymbolGraphicsGenerator.h
src/core/network/: AsyncNetworkRequest.cpp  AsyncNetworkRequest.h  CMakeLists.txt  INetworkClient.h  NetworkClient.cpp  NetworkClient.h  (+1 more)
src/easyeda/: CMakeLists.txt  EasyedaApi.cpp  EasyedaApi.h  EasyedaImporter.cpp  EasyedaImporter.h
src/gui/: CMakeLists.txt  ComponentManager.cpp  ComponentManager.h  MainWindow.cpp  MainWindow.h
src/kicad/: CMakeLists.txt  KicadSymbolExporter.cpp  KicadSymbolExporter.h
src/models/: CMakeLists.txt  ComponentData.cpp  ComponentData.h  ComponentExportStatus.h  ComponentListItemData.cpp  ComponentListItemData.h  FootprintData.cpp  FootprintData.h  FootprintDataSerializer.cpp  FootprintDataSerializer.h  Model3DData.cpp  Model3DData.h  SymbolData.cpp  SymbolData.h  SymbolDataSerializer.cpp  SymbolDataSerializer.h  SymbolPinSerializer.cpp  SymbolPinSerializer.h  SymbolShapeSerializer.cpp  SymbolShapeSerializer.h
src/services/: BomParser.cpp  BomParser.h  CMakeLists.txt  CacheHealthManager.cpp  CacheHealthManager.h  CachePruner.cpp  CachePruner.h  CacheRepository.h  CadDataLoader.cpp  CadDataLoader.h  ComponentCacheService.cpp  ComponentCacheService.h  ComponentDataCollector.cpp  ComponentDataCollector.h  ComponentExportTask.cpp  ComponentExportTask.h  ComponentQueueManager.cpp  ComponentQueueManager.h  ComponentService.cpp  ComponentService.h  ConfigService.cpp  ConfigService.h  DatasheetExporter.cpp  DatasheetExporter.h  ExportService.cpp  ExportService.h  ExportService_Pipeline.cpp  ExportService_Pipeline.h  LcscImageService.cpp  LcscImageService.h  MemoryMonitor.cpp  MemoryMonitor.h  ParallelFetchContext.cpp  ParallelFetchContext.h  PipelineCompletionHandler.cpp  PipelineCompletionHandler.h  PreviewImageExporter.cpp  PreviewImageExporter.h  UpdateCheckerService.cpp  UpdateCheckerService.h
src/ui/: CMakeLists.txt
src/utils/: BoundedThreadSafeQueue.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  FileUtils.cpp  FileUtils.h  PathSecurity.cpp  PathSecurity.h  TestableSingleton.h
src/workers/: BaseWorker.h  CMakeLists.txt  ExportWorker.cpp  ExportWorker.h  FetchWorker.cpp  FetchWorker.h  MediaFetchWorker.cpp  MediaFetchWorker.h  NetworkWorker.cpp  NetworkWorker.h  ProcessWorker.cpp  ProcessWorker.h  WriteWorker.cpp  WriteWorker.h
tests/: CMakeLists.txt  INTEGRATION_TEST_GUIDE.md  PERFORMANCE_TEST_GUIDE.md  PIPELINE_BASELINE_REPORT.md  README.md  README_en.md  TESTING_GUIDE.md  test_bom_sample.csv  test_component_data_collector.cpp  test_component_service.cpp  test_component_service_mock.cpp  test_config_service.cpp  test_export_service.cpp  test_export_service_pipeline.cpp  test_integration.cpp  test_layer_mapping.cpp  test_performance.cpp  test_pipeline_baseline.cpp  test_uuid_extraction.cpp
tests/benchmark/: CMakeLists.txt  test_benchmark_core.cpp
tests/common/: IFileProvider.hpp  MockNetworkAdapter.hpp  MockNetworkClient.hpp  TestPaths.hpp
tests/fixtures/: README.md  cad_data.json  component_data.json  symbol_data.json
tests/golden/: README.md
tests/helpers/: TestHelpers.h
tests/integration/: CMakeLists.txt  test_fixture_to_kicad_export.cpp  test_parallel_export_cancellation.cpp
tests/manual/: CLI_TEST_MANUAL.md  WINDOW_STATE_MANUAL_CHECKLIST.md
tests/mocks/: MockEasyedaApi.h  MockNetworkUtils.h
tests/ui/: CMakeLists.txt  main.cpp  tst_BasicComponents.qml  tst_Card.qml  tst_ControllerBinding.qml  tst_ExportFlow.qml  tst_ExportProgressCard.qml  tst_ExportResultsCard.qml  tst_ExportSettingsCard.qml  tst_MainDialogBindings.qml  tst_ThemeBinding.qml  tst_WindowControllerClosing.qml
tests/unit/: CMakeLists.txt  test_atomic_file_writer.cpp  test_bom_parser.cpp  test_cache_pruner.cpp  test_cad_data_loader.cpp  test_cli_converters.cpp  test_command_line_parser.cpp  test_completion_generator.cpp  test_component_cache_service.cpp  test_component_list_viewmodel.cpp  test_component_service.cpp  test_config_service.cpp  test_core_utils.cpp  test_easyeda_api.cpp  test_easyeda_importer_fixtures.cpp  test_export_progress.cpp  test_export_progress_viewmodel.cpp  test_export_report_generator.cpp  test_export_settings_viewmodel.cpp  test_export_type_stage.cpp  test_export_worker_helpers.cpp  test_exporter_3d_model.cpp  test_fetch_worker.cpp  test_file_reader.cpp  test_kicad_exporter_golden.cpp  test_kicad_graphics_generators.cpp  test_kicad_library_table_manager.cpp  test_language_manager.cpp  test_logging.cpp  test_models.cpp  test_network_client.cpp  test_path_security.cpp  test_process_worker.cpp  test_svg_path_parser.cpp  test_temp_file_manager.cpp  test_test_paths.cpp  test_validation_state_manager.cpp  test_viewmodels.cpp  test_write_worker.cpp
(+3607 files in other folders)
